<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fraglab.net.myapplication.MainActivity">

    <EditText
        android:id="@+id/isbn_text_id"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/button_ok_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/ISBN" />

    <Button
        android:id="@+id/button_ok_id"
        android:layout_width="70dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ok"
        app:layout_constraintBaseline_toBaselineOf="@+id/isbn_text_id"
        app:layout_constraintEnd_toStartOf="@+id/button_reset_id" />

    <Button
        android:id="@+id/button_reset_id"
        android:layout_width="70dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reset"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_ok_id"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_isbn_id"
        android:layout_width="@dimen/label_width"
        android:layout_height="@dimen/label_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_isbn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isbn_text_id" />

    <TextView
        android:id="@+id/label_title_id"
        android:layout_width="@dimen/label_width"
        android:layout_height="@dimen/label_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_isbn_id" />

    <TextView
        android:id="@+id/value_isbn_id"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/label_height"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="..."
        app:layout_constraintBaseline_toBaselineOf="@+id/label_isbn_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_isbn_id" />

    <TextView
        android:id="@+id/value_title_id"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/label_height"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="..."
        app:layout_constraintBaseline_toBaselineOf="@+id/label_title_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_title_id" />

</android.support.constraint.ConstraintLayout>
